--- a/src/static/index.html
+++ b/src/static/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -17,7 +17,7 @@
     <div id="meeting-page" class="page hidden">
         <div class="video-container">
             <img src="http://localhost/video" width="800" />
-                
+            
         </div>
         <div class="controls">
             <button id="audio-button" class="control-button">Mute</button>
